[package]
name = "adapta"
version = "0.0.2"
edition = "2021"
authors = ["Chanak Karki"]
description = "Zero-latency, no_std closed-loop adaptation kernel and Edgeworth higher-order retry tuner"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darksolitaire9-hub/adapta"

[[bin]]
name = "adapta"
path = "src/bin/adapta.rs"
required-features = ["std"]

[features]
default = ["std"]
std = []
tower = ["std", "dep:tower-service", "dep:tower-layer", "dep:pin-project-lite"]

[dependencies]
tower-service = { version = "0.3", optional = true }
tower-layer = { version = "0.3", optional = true }
pin-project-lite = { version = "0.2", optional = true }

[dev-dependencies]
proptest = "1.5"
tokio = { version = "1.36", features = ["rt", "macros", "time"] }
